[gd_scene format=3 uid="uid://boqkmils8jcu0"]

[ext_resource type="Texture2D" uid="uid://bhel42ms6d4fd" path="res://2d/Art/Player/Assets/Prototype_Character/prototype_character.png" id="1_teuo1"]
[ext_resource type="Script" uid="uid://cqb0ianbjx8g7" path="res://2d/Scripts/player_2d.gd" id="1_wxkyi"]
[ext_resource type="Texture2D" uid="uid://bhi0etljx2tqe" path="res://2d/Art/UI/light.png" id="3_xtbij"]
[ext_resource type="Texture2D" uid="uid://4at20lbveivs" path="res://2d/Art/UI/circle-removebg-preview.png" id="4_242ie"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wxkyi"]
radius = 5.0
height = 10.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wxkyi"]
atlas = ExtResource("1_teuo1")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtbij"]
atlas = ExtResource("1_teuo1")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_242ie"]
atlas = ExtResource("1_teuo1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ltgo"]
atlas = ExtResource("1_teuo1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_40kr6"]
atlas = ExtResource("1_teuo1")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wr8"]
atlas = ExtResource("1_teuo1")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3b4u"]
atlas = ExtResource("1_teuo1")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhhca"]
atlas = ExtResource("1_teuo1")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqdxr"]
atlas = ExtResource("1_teuo1")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbqoa"]
atlas = ExtResource("1_teuo1")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ag85"]
atlas = ExtResource("1_teuo1")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k264m"]
atlas = ExtResource("1_teuo1")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atvgu"]
atlas = ExtResource("1_teuo1")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_435oy"]
atlas = ExtResource("1_teuo1")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4heg"]
atlas = ExtResource("1_teuo1")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wexap"]
atlas = ExtResource("1_teuo1")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2elaj"]
atlas = ExtResource("1_teuo1")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xijvy"]
atlas = ExtResource("1_teuo1")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r1kqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxkyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtbij")
}],
"loop": false,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_242ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ltgo")
}],
"loop": false,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40kr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wr8")
}],
"loop": false,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3b4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhhca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqdxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbqoa")
}],
"loop": false,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ag85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k264m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atvgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_435oy")
}],
"loop": false,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4heg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wexap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2elaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xijvy")
}],
"loop": false,
"name": &"walk_side",
"speed": 5.0
}]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_wxkyi"]
points = PackedVector2Array(36.999992, -78, -42.000008, -78, 0, 0)

[node name="Player2D" type="CharacterBody2D" unique_id=150568099 groups=["Player"]]
script = ExtResource("1_wxkyi")

[node name="Hitbox" type="CollisionShape2D" parent="." unique_id=442761815]
shape = SubResource("CapsuleShape2D_wxkyi")

[node name="Animations" type="AnimatedSprite2D" parent="." unique_id=581148120]
sprite_frames = SubResource("SpriteFrames_r1kqf")
animation = &"idle_back"

[node name="Camera2D" type="Camera2D" parent="." unique_id=520609841]
position = Vector2(0, 1)
zoom = Vector2(7, 7)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="Watch" type="Area2D" parent="." unique_id=170855017]
rotation = 3.1415927

[node name="Watch_Me" type="CollisionShape2D" parent="Watch" unique_id=2137464998]
rotation = -1.5707964
shape = SubResource("ConvexPolygonShape2D_wxkyi")

[node name="PointLight2D" type="PointLight2D" parent="." unique_id=1039285477]
scale = Vector2(1.35, 1.3)
texture = ExtResource("3_xtbij")
offset = Vector2(2, 30)
texture_scale = 0.01

[node name="PointLight2D2" type="PointLight2D" parent="." unique_id=396604857]
position = Vector2(0, 2.3841858e-07)
scale = Vector2(16.455626, 16.422499)
texture = ExtResource("4_242ie")
texture_scale = 0.01
